added linear models work

--- a/DataCollection/data_script.ipynb
+++ b/DataCollection/data_script.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -130,7 +130,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<thead><tr><th></th><th scope=col>Date</th><th scope=col>Infl_d</th><th scope=col>BOT_d</th><th scope=col>Yield_d</th><th scope=col>FER_d</th><th scope=col>Int_d</th><th scope=col>PrimeRate_d</th><th scope=col>1Y_Yield</th><th scope=col>GDPG_d</th><th scope=col>CA_d</th><th scope=col>FDI_d</th><th scope=col>Country</th></tr></thead>\n",
+       "<thead><tr><th></th><th scope=col>Date</th><th scope=col>Infl_d</th><th scope=col>BOT_d</th><th scope=col>Yield_d</th><th scope=col>FER_d</th><th scope=col>Int_d</th><th scope=col>PrimeRate_d</th><th scope=col>1Y_Yield_d</th><th scope=col>GDPG_d</th><th scope=col>CA_d</th><th scope=col>FDI_d</th><th scope=col>Country</th></tr></thead>\n",
        "<tbody>\n",
        "\t<tr><th scope=row>537</th><td>2015-10-01</td><td>0</td><td>-42484</td><td>2.0368</td><td>120218</td><td>0.25</td><td>3.25</td><td>2</td><td>-124120</td><td>38492</td><td>0.33</td><td>usa</td></tr>\n",
        "\t<tr><th scope=row>538</th><td>2015-11-01</td><td>0.2</td><td>-44610</td><td>2.1421</td><td>119267</td><td>0.25</td><td>3.25</td><td>1.088602</td><td>-276419.5</td><td>33914.59</td><td>0.34</td><td>usa</td></tr>\n",
@@ -143,7 +143,7 @@
       ],
       "text/latex": [
        "\\begin{tabular}{r|llllllllllll}\n",
-       "  & Date & Infl_d & BOT_d & Yield_d & FER_d & Int_d & PrimeRate_d & 1Y_Yield & GDPG_d & CA_d & FDI_d & Country\\\\\n",
+       "  & Date & Infl_d & BOT_d & Yield_d & FER_d & Int_d & PrimeRate_d & 1Y_Yield_d & GDPG_d & CA_d & FDI_d & Country\\\\\n",
        "\\hline\n",
        "\t537 & 2015-10-01 & 0 & -42484 & 2.0368 & 120218 & 0.25 & 3.25 & 2 & -124120 & 38492 & 0.33 & usa\\\\\n",
        "\t538 & 2015-11-01 & 0.2 & -44610 & 2.1421 & 119267 & 0.25 & 3.25 & 1.088602 & -276419.5 & 33914.59 & 0.34 & usa\\\\\n",
@@ -154,13 +154,13 @@
        "\\end{tabular}\n"
       ],
       "text/plain": [
-       "          Date Infl_d  BOT_d Yield_d  FER_d Int_d PrimeRate_d  1Y_Yield\n",
-       "537 2015-10-01    0.0 -42484  2.0368 120218  0.25        3.25 2.0000000\n",
-       "538 2015-11-01    0.2 -44610  2.1421 119267  0.25        3.25 1.0886020\n",
-       "539 2015-12-01    0.5 -42226  2.2060 116640  0.25        3.25 0.5836637\n",
-       "540 2016-01-01    0.7 -43357  2.2694 117581  0.50        3.37 0.7000000\n",
-       "541 2016-02-01    1.4     NA  1.9209     NA  0.50        3.50 1.6524256\n",
-       "542 2016-03-01     NA     NA  1.7449     NA    NA          NA 3.6557554\n",
+       "          Date Infl_d  BOT_d Yield_d  FER_d Int_d PrimeRate_d 1Y_Yield_d\n",
+       "537 2015-10-01    0.0 -42484  2.0368 120218  0.25        3.25  2.0000000\n",
+       "538 2015-11-01    0.2 -44610  2.1421 119267  0.25        3.25  1.0886020\n",
+       "539 2015-12-01    0.5 -42226  2.2060 116640  0.25        3.25  0.5836637\n",
+       "540 2016-01-01    0.7 -43357  2.2694 117581  0.50        3.37  0.7000000\n",
+       "541 2016-02-01    1.4     NA  1.9209     NA  0.50        3.50  1.6524256\n",
+       "542 2016-03-01     NA     NA  1.7449     NA    NA          NA  3.6557554\n",
        "        GDPG_d       CA_d FDI_d Country\n",
        "537  -124120.0  38492.000  0.33     usa\n",
        "538  -276419.5  33914.585  0.34     usa\n",
@@ -170,7 +170,7 @@
        "542 -1797074.1 -25050.048  0.53     usa"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,14 +181,14 @@
     "                            monthly = c('CPIC','BOT','GYLD','FER','IR','BLR'),\n",
     "                            quarterly = c('GGR','CA','FDI'), \n",
     "                    col_names = c('Date','Infl_d','BOT_d',\n",
-    "                                  'Yield_d','FER_d','Int_d','PrimeRate_d','1Y_Yield',\n",
+    "                                  'Yield_d','FER_d','Int_d','PrimeRate_d','1Y_Yield_d',\n",
     "                                  'GDPG_d','CA_d','FDI_d','Country'))\n",
     "tail(usa)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -211,7 +211,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<thead><tr><th></th><th scope=col>Date</th><th scope=col>Infl_f</th><th scope=col>BOT_f</th><th scope=col>FER_f</th><th scope=col>Int_f</th><th scope=col>1Y_Yield</th><th scope=col>GDPG_f</th><th scope=col>CA_f</th><th scope=col>Exchange</th><th scope=col>Country</th></tr></thead>\n",
+       "<thead><tr><th></th><th scope=col>Date</th><th scope=col>Infl_f</th><th scope=col>BOT_f</th><th scope=col>FER_f</th><th scope=col>Int_f</th><th scope=col>1Y_Yield_f</th><th scope=col>GDPG_f</th><th scope=col>CA_f</th><th scope=col>Exchange</th><th scope=col>Country</th></tr></thead>\n",
        "<tbody>\n",
        "\t<tr><th scope=row>297</th><td>2015-10-01</td><td>-0.1</td><td>19950.7</td><td>332253</td><td>0.05</td><td>0.3</td><td>33.8</td><td>-0.27</td><td>0.8905513</td><td>europe</td></tr>\n",
        "\t<tr><th scope=row>298</th><td>2015-11-01</td><td>0.1</td><td>23989.8</td><td>324595</td><td>0.05</td><td>0.2854791</td><td>33.8854</td><td>-0.34</td><td>0.8906306</td><td>europe</td></tr>\n",
@@ -224,7 +224,7 @@
       ],
       "text/latex": [
        "\\begin{tabular}{r|llllllllll}\n",
-       "  & Date & Infl_f & BOT_f & FER_f & Int_f & 1Y_Yield & GDPG_f & CA_f & Exchange & Country\\\\\n",
+       "  & Date & Infl_f & BOT_f & FER_f & Int_f & 1Y_Yield_f & GDPG_f & CA_f & Exchange & Country\\\\\n",
        "\\hline\n",
        "\t297 & 2015-10-01 & -0.1 & 19950.7 & 332253 & 0.05 & 0.3 & 33.8 & -0.27 & 0.8905513 & europe\\\\\n",
        "\t298 & 2015-11-01 & 0.1 & 23989.8 & 324595 & 0.05 & 0.2854791 & 33.8854 & -0.34 & 0.8906306 & europe\\\\\n",
@@ -235,13 +235,13 @@
        "\\end{tabular}\n"
       ],
       "text/plain": [
-       "          Date Infl_f   BOT_f  FER_f Int_f  1Y_Yield   GDPG_f  CA_f  Exchange\n",
-       "297 2015-10-01   -0.1 19950.7 332253  0.05 0.3000000 33.80000 -0.27 0.8905513\n",
-       "298 2015-11-01    0.1 23989.8 324595  0.05 0.2854791 33.88540 -0.34 0.8906306\n",
-       "299 2015-12-01    0.2 23716.5 323777  0.05 0.2842445 36.16762 -0.41 0.9322271\n",
-       "300 2016-01-01    0.2 24281.7 333872  0.05 0.3000000 41.40000 -0.39 0.9183580\n",
-       "301 2016-02-01    0.4      NA     NA  0.05 0.3364493 50.33588 -0.46 0.9212345\n",
-       "302 2016-03-01     NA      NA     NA    NA 0.3972961 63.72858 -0.50 0.8971024\n",
+       "          Date Infl_f   BOT_f  FER_f Int_f 1Y_Yield_f   GDPG_f  CA_f  Exchange\n",
+       "297 2015-10-01   -0.1 19950.7 332253  0.05  0.3000000 33.80000 -0.27 0.8905513\n",
+       "298 2015-11-01    0.1 23989.8 324595  0.05  0.2854791 33.88540 -0.34 0.8906306\n",
+       "299 2015-12-01    0.2 23716.5 323777  0.05  0.2842445 36.16762 -0.41 0.9322271\n",
+       "300 2016-01-01    0.2 24281.7 333872  0.05  0.3000000 41.40000 -0.39 0.9183580\n",
+       "301 2016-02-01    0.4      NA     NA  0.05  0.3364493 50.33588 -0.46 0.9212345\n",
+       "302 2016-03-01     NA      NA     NA    NA  0.3972961 63.72858 -0.50 0.8971024\n",
        "    Country\n",
        "297  europe\n",
        "298  europe\n",
@@ -251,7 +251,7 @@
        "302  europe"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
     "                            monthly = c('CPIC','BOT','FER','IR'),\n",
     "                            quarterly = c('GGR','CA'), \n",
     "                    col_names = c('Date','Infl_f','BOT_f',\n",
-    "                                  'FER_f','Int_f','1Y_Yield','GDPG_f',\n",
+    "                                  'FER_f','Int_f','1Y_Yield_f','GDPG_f',\n",
     "                                  'CA_f','Exchange','Country'))\n",
     "euro$Exchange <- 1/euro$Exchange\n",
     "setwd('/home/matt/MSOR/ISYE7406/ML-Ex-Rates/Data')\n",
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -338,7 +338,7 @@
        "542 1.407856 australia"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -391,13 +391,13 @@
     "                            monthly = c('CPIC','BOT','GYLD','FER','IR','BLR'),\n",
     "                            quarterly = c('GGR','CA','FDI'), \n",
     "                    col_names = c('Date','Infl_f','BOT_f',\n",
-    "                                  'Yield_f','FER_f','Int_f','PrimeRate_f','1Y_Yield',\n",
+    "                                  'Yield_f','FER_f','Int_f','PrimeRate_f','1Y_Yield_f',\n",
     "                                  'GDPG_f','CA_f','FDI_f','Exchange','Country'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -461,13 +461,13 @@
     "                            monthly = c('CPIC','BOT','GYLD','FER','IR','BLR'),\n",
     "                            quarterly = c('GGR','CA','FDI'), \n",
     "                    col_names = c('Date','Infl_f','BOT_f',\n",
-    "                                  'Yield_f','FER_f','Int_f','PrimeRate_f','1Y_Yield',\n",
+    "                                  'Yield_f','FER_f','Int_f','PrimeRate_f','1Y_Yield_f',\n",
     "                                  'GDPG_f','CA_f','FDI_f','Exchange','Country'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -497,13 +497,13 @@
     "                            monthly = c('CPIC','BOT','GYLD','FER','IR','BLR'),\n",
     "                            quarterly = c('GGR','CA','FDI'), \n",
     "                    col_names = c('Date','Infl_f','BOT_f',\n",
-    "                                  'Yield_f','FER_f','Int_f','PrimeRate_f','1Y_Yield',\n",
+    "                                  'Yield_f','FER_f','Int_f','PrimeRate_f','1Y_Yield_f',\n",
     "                                  'GDPG_f','CA_f','FDI_f','Exchange','Country'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -533,13 +533,13 @@
     "                            monthly = c('CPIC','BOT','GYLD','FER','IR'),\n",
     "                            quarterly = c('GGR','CA','FDI'), \n",
     "                    col_names = c('Date','Infl_f','BOT_f',\n",
-    "                                  'Yield_f','FER_f','Int_f','1Y_Yield',\n",
+    "                                  'Yield_f','FER_f','Int_f','1Y_Yield_f',\n",
     "                                  'GDPG_f','CA_f','FDI_f','Exchange','Country'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -569,7 +569,7 @@
     "                            monthly = c('CPIC','BOT','GYLD','FER','IR','BLR'),\n",
     "                            quarterly = c('GGR','CA','FDI'), \n",
     "                    col_names = c('Date','Infl_f','BOT_f',\n",
-    "                                  'Yield_f','FER_f','Int_f','PrimeRate_f','1Y_Yield',\n",
+    "                                  'Yield_f','FER_f','Int_f','PrimeRate_f','1Y_Yield_f',\n",
     "                                  'GDPG_f','CA_f','FDI_f','Exchange','Country'))\n",
     "nzl$Exchange <- 1/nzl$Exchange\n",
     "setwd('/home/matt/MSOR/ISYE7406/ML-Ex-Rates/Data')\n",
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -607,13 +607,13 @@
     "                            monthly = c('CPIC','BOT','GYLD','FER','IR'),\n",
     "                            quarterly = c('GGR','CA'), \n",
     "                    col_names = c('Date','Infl_f','BOT_f',\n",
-    "                                  'Yield_f','FER_f','Int_f','1Y_Yield',\n",
+    "                                  'Yield_f','FER_f','Int_f','1Y_Yield_f',\n",
     "                                  'GDPG_f','CA_f','Exchange','Country'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -643,13 +643,13 @@
     "                            monthly = c('CPIC','BOT','GYLD','FER','IR'),\n",
     "                            quarterly = c('GGR','CA','FDI'), \n",
     "                    col_names = c('Date','Infl_f','BOT_f',\n",
-    "                                  'Yield_f','FER_f','Int_f','1Y_Yield',\n",
+    "                                  'Yield_f','FER_f','Int_f','1Y_Yield_f',\n",
     "                                  'GDPG_f','CA_f','FDI_f','Exchange','Country'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -679,13 +679,13 @@
     "                            monthly = c('CPIC','BOT','GYLD','FER','IR'),\n",
     "                            quarterly = c('GGR','CA','FDI'), \n",
     "                    col_names = c('Date','Infl_f','BOT_f',\n",
-    "                                  'Yield_f','FER_f','Int_f','1Y_Yield',\n",
+    "                                  'Yield_f','FER_f','Int_f','1Y_Yield_f',\n",
     "                                  'GDPG_f','CA_f','FDI_f','Exchange','Country'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
