--- a/Paper/exchange_rates.tex
+++ b/Paper/exchange_rates.tex
@@ -79,13 +79,17 @@ Matthew Robinson \\
        \email{mrobinson72@gatech.edu}
 }
 
-\date{31 January 2016}
+\date{20 February 2016}
 
 \maketitle
 
 \section{Introduction}
+International business involves considerable risk. This is especially true for manufacturers, who often make production decisions well in advance of delivery dates. Consider the position of an airline that is preparing to expand its fleet. A typical contract for this purpose might involve an order for a passenger jet that will not be completed for a year or more, with payment due upon delivery of the jet. If the buyer is American and the manufacturer is also American, this is not a problem. All of the manufacturers production costs will be valued in US dollars, and the customer will pay in US dollars.
+\par{} In contrast, consider the situation if the buyer is Canadian and the manufacturer is American. Since the manufacturer is American, the Canadian firm must pay for the jet in US dollars. Suppose the value of the US dollar appreciates 10\% relative to the Canadian dollar while the American firm is filling the order. Then, when the Canadian firm pays for the jet, it is 10\% more expensive in terms of Canadian dollars than when it ordered it. If the movement were in the opposite direction, the manufacturer would receive 10\% fewer US dollars for the jet than it expected when it was ordered. Clearly, both firms would be interested in predicting adverse currency movements in advance, and may be interested in writing expected future currency valuations into contracts. 
+\par{} This paper seeks to resolve this dilemma by estimating a model that predicts the percent change in the exchange rate after one year, using only information that is currently available. The remainder of this section will provide an explicit problem definition, as well as an overview of prevailing economic theory and past statistical research on exchange rates. In the following section, we explain the data set and data sources. Next, we develop several models for predicting exchange rates and compare their effectiveness. Finally, we conclude by suggesting the most effective means to predict exchange rates and possible directions for future research.
 
 \subsection{Problem Definition}
+
 
 \subsection{Related Work}
 Research on equilibrium in foreign exchange markets is a well developed component of classical economic theory. Classical models rest on two fundamental ideas. The first is that foreign exchange markets achieve equilibrium when the rate of return on deposits is the same across all currencies. The idea that investors will be indifferent between bank deposits denominated in different currencies is known as interest rate parity. The second is that the price of goods will be the same when valued in different currencies. The notion that a basket of goods should cost the same in all currencies is known as purchasing power parity.
@@ -97,10 +101,12 @@ e_{t+1} = e_{t} \left( \frac{1+i_{d}}{1+i_{f}} \right)
 \begin{equation}
 \frac{e_{t+1}-e_{t}}{e_{t}} = \frac{1+\pi_{d}}{1+\pi{f}} - 1
 \end{equation}
-\par{} Obstfeld and Taylor show that arbitrage opportunities between foreign and domestic assets are near zero under floating currency regimes, which suggests that exchange rates behave as predicted by interest rate parity. Likewise, Frankel and Rose provide evidence that exchange rates converge to levels predicted by purchasing power parity in the long run. The relevant time-frame for the \emph{long run} in this context is about four years. Under shorter time horizons, purchasing power parity performs considerably less well. Likewise, difficulty in predicting the relative performance of financial assets in different countries makes it difficult to use interest rate parity to predict exchange rates. In fact, Meese and Rogoff famously demonstrated that a random walk outperforms structural models for the exchange rate over a one to twelve month window. The dismal ability of standard economic models to predict exchange rates over the medium runs calls for a different approach.
+\par{} Obstfeld and Taylor show that arbitrage opportunities between foreign and domestic assets are near zero under floating currency regimes, which suggests that exchange rates behave as predicted by interest rate parity. Likewise, Frankel and Rose provide evidence that exchange rates converge to levels predicted by purchasing power parity in the long run. The relevant time-frame for the \emph{long run} in this context is about four years. Under shorter time horizons, purchasing power parity performs considerably less well. Likewise, difficulty in predicting the relative performance of financial assets in different countries makes it difficult to predict interest rates using interest rate parity. In fact, Meese and Rogoff famously demonstrated that a random walk outperforms structural models for the exchange rate over a one to twelve month window. For this reason, the random walk is currently used as a benchmark for assessing the quality of models for predicting exchange rates.
 \par{} [overview of ML literature on exchange rates here ...]
 
 \section{Data}
+This paper restricts its attention to changes in the exchange rate between the United States and its five biggest trading partners, excluding China. These trading partners are Europe, Canada, Mexico, Japan and South Korea. Europe in this context refers to the 19 countries that belong to the eurozone. Since they have a single monetary policy, they will be treated as a single unit for the purposes of this paper. China is excluded because it fixes its exchange rate. Because of this, its exchange rate is determined by government policy rather than economic variables.
+\par{} The data used in this paper was collected entirely by central banks and compiled by Quandl, an economic data repository. The primary variables of interest in the data set are the inflation rate, interest rate and the yield on one year government bonds. In this data set, the inflation rate measures the annualized percent change in the consumer price index for each country. The interest rate is the interbank lending rate set by the central bank for the currency in question. For the United States, this is the federal funds rate.  Other variables in the data set include an area's balance of trade, current account, foreign exchange reserves and other factors related to international financial flows. These variables were measured both for the United States and each currency pairing. Each variable is measured monthly, with the exception of GDP growth, current account balance and foreign direct investment. These variables are measured quarterly. In order to align this data with the rest of the data set, values for the intervening two months between each quarter were interpolated using cubic splines.
 
 \section{Results}
 
