--- a/Paper/exchange_rates.tex
+++ b/Paper/exchange_rates.tex
@@ -99,7 +99,8 @@ e_{t+1} = e_{t} \left( \frac{1+i_{d}}{1+i_{f}} \right)
 \frac{e_{t+1}-e_{t}}{e_{t}} = \frac{1+\pi_{d}}{1+\pi{f}} - 1
 \end{equation}
 \par{} Obstfeld and Taylor show that arbitrage opportunities between foreign and domestic assets are near zero under floating currency regimes, which suggests that exchange rates behave as predicted by interest rate parity. Likewise, Frankel and Rose provide evidence that exchange rates converge to levels predicted by purchasing power parity in the long run. The relevant time-frame for the \emph{long run} in this context is about four years. Under shorter time horizons, purchasing power parity performs considerably less well. Likewise, difficulty in predicting the relative performance of financial assets in different countries makes it difficult to predict interest rates using interest rate parity. In fact, Meese and Rogoff famously demonstrated that a random walk outperforms structural models for the exchange rate over a one to twelve month window. For this reason, the random walk is currently used as a benchmark for assessing the quality of models for predicting exchange rates.
-\par{} [overview of ML literature on exchange rates here ...]
+\par{} Apart from random walks other approaches to have been studied to accurately determine future changes in exchange rates. Hsiech showed that there is little linear dependence in exchange-rate changes but there is a strong nonlinear dependence. On the other hand, Meese and Rose showed that nonlinear estimators to do not significantly improve popular models for predicting exchange rates. All these observations happened with the use of macroeconomic variables such as interest rates and inflation rates. Lyons and Evans showed that models become much more accurate with the introduction of microeconomics. They augmented previously used linear models with a new variable, order flow, which is the net of buyer and seller initiated orders. The introduction of this variable resulted in accurately predicting 60\% of daily changes in Deutsche mark/US dollar rate. 
+\par{} Another popular model in determining future exchange rates is the artificial neural network. Panda and Narasimhan showed that Neural networks outperform both random walk and linear autoregressive models when predicting weekly changes in Indian rupee/US dollar exchange rates.   
 
 \subsection{Data}
 This paper restricts its attention to changes in the exchange rate between the United States and its five biggest trading partners, excluding China. These trading partners are Europe, Canada, Mexico, Japan and South Korea. Europe in this context refers to the 19 countries that belong to the eurozone. Since they have a single monetary policy, they will be treated as a single unit for the purposes of this paper. China is excluded because it fixes its exchange rate. Because of this, its exchange rate is determined by government policy rather than economic variables.
@@ -188,6 +189,22 @@ University of Chicago Press: 121-188.
 \item Wooldridge, J. 2009.
 {\it Introductory Econometrics}. 4th Ed.
 Mason, Ohio: South-Western Cengage Learning.
+
+\item Hsieh, D. 1989
+``Testing for Nonlinear Dependence in Daily Foreign Exchange Rate Changes.''
+{\it Journal of Business} 62: 329-368.
+
+\item Meese, R.A. and A.K. Rose. 1990
+``Nonlinear, Nonparametric, Nonessential Exchange Rate Estimation.''
+{\it The American Economic Review} 80: 192-196 
+
+\item Lyons, K.R. and M.D.D. Evans. 2002
+``Order Flow and Exchange Rate Dynamics.''
+{\it Journal of Political Economy} 110: 170-180
+
+\item Panda, C. and V. Narasimhan 2007
+``Forecasting exchange rate better with artificial neural network.''
+{\it Journal of Policy Modeling} 29: 227-236
 
 
 
